feat: add location to api and data model
- Update openapi specification to add Location to the Domain schema, and update
  the generated code.
- Update data model to add Location field for the ipa_servers.
- Update migration SQL scripts to add the new location field to the database.
- Update interactor to consider location field along the different operations.
- Update presenter to consider location field along the different operations.
- No change is necessary on the handlers.
