# internal/domain/model/ipa_server.go
@@ -9,6 +9,7 @@ type IpaServer struct {
 	IpaID               uint
 	FQDN                string
 	RHSMId              string `gorm:"unique;column:rhsm_id"`
+	Location            string
 	CaServer            bool
 	HCCEnrollmentServer bool
 	HCCUpdateServer     bool
